--- a/GY.AntiGlitch/packages.config
+++ b/GY.AntiGlitch/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FSharp.Core" version="4.5.2" targetFramework="net45" />
+  <package id="FSharp.Control.AsyncSeq" version="2.0.21" targetFramework="net461" />
+  <package id="FSharp.Core" version="4.6.2" targetFramework="net461" />
   <package id="FSharp.Compiler.Tools" version="10.0.2" targetFramework="net45" />
 </packages>
